# gep_toolkit

./: .gitignore  Cargo.toml  README.md
examples/oxigen_math_expression/: Cargo.toml
examples/oxigen_math_expression/src/: main.rs
examples/saving_loading/: Cargo.toml
examples/saving_loading/src/: main.rs
src/: expressions.rs  genes.rs  k_expression.rs  k_expressions.rs  k_expressions_builder.rs  lib.rs  mod.rs  operation_ids.rs  operation_set.rs  operations.rs  primitive_operations.rs  stack_operation.rs
src/k_expr/: builder.rs  core.rs  mod.rs  serialize.rs
src/operations/: expressions.rs  mod.rs  op_set.rs  primitives.rs  stack_op.rs
src/utils/: collections.rs  filesystem.rs  mod.rs
