[package]
name = "gep_toolkit"
version = "0.2.0"
edition = "2021"
description = "Gene Expressions Programming toolkit"
repository = "https://github.com/Defake/gep_toolkit"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["gene", "genetic", "expressions", "symbolic", "regression"]
exclude = [
    "examples/*",
]

[dependencies]
rand = "0.7"
serde = { version = "1.0.142", features = ["derive"] }
bincode = "1.3.3"
simple-error = "0.2.3"